Fixes and added clarity

--- a/movie_sentiment_analysis.ipynb
+++ b/movie_sentiment_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -108,13 +108,12 @@
        "4          2  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Replace 'train_path' and 'test_path' with your actual file paths for the training and test datasets\n",
     "train_df = pd.read_csv('train.tsv.zip', sep='\\t')\n",
     "test_df = pd.read_csv('test.tsv.zip', sep='\\t')\n",
     "\n",
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +203,7 @@
        "4    156065        8545         intermittently pleasing but mostly routine"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,13 +236,12 @@
    ],
    "source": [
     "print(\"Null values in training data:\", train_df.isnull().sum())\n",
-    "print(\"Null values in test data:\", test_df.isnull().sum())\n",
-    "# Since there are no null values, we don't need to handle them in this case.\n"
+    "print(\"Null values in test data:\", test_df.isnull().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -393,10 +391,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We get the same results from the optimized model as we do for our original model. Other methods could be inplemented including using BERT for increased nuance detection\n"
+     ]
+    }
+   ],
+   "source": [
+    "if accuracy_optimized == accuracy:\n",
+    "    print(\"We get the same results from the optimized model as we do for our original model. Other methods could be inplemented including using BERT for increased nuance detection\")\n",
+    "elif accuracy_optimized > accuracy:\n",
+    "    print(\"We get better results from the optimized model than we do for our original model. Other methods could be inplemented including using BERT for increased nuance detection\")\n",
+    "else:\n",
+    "    print(\"We get worse results from the optimized model than we do for our original model. Other methods could be inplemented including using BERT for increased nuance detection\")"
+   ]
   }
  ],
  "metadata": {
